[BUG] Film page header is bugged on mobile version (#19)

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -938,6 +938,7 @@ input[type="search"]::-webkit-search-decoration {
     .film_banner {
         height: 400px;
         margin-bottom: -300px;
+        margin-top: 0;
     }
 
     .banner-play {
